Fixed menu, status, minigame vertical alignment

--- a/css/StatusView.css
+++ b/css/StatusView.css
@@ -8,6 +8,8 @@
     display: table; 
     position: relative; 
     overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
 
 .ssStatusViewBox {
